[package]
name = "sync-server-client"
version = "0.1.0"
authors = ["Noel Kwan <noelkwan1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.8.2" }
log = { version = "0.4.14" }
tokio = { version = "1.1.1", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
